# eva-vm

./: .gitignore  .travis.yml  Doxyfile.meson  README.md  meson.build  meson_options.txt
include/: meson.build
include/evavm/: disassemble.h  eva.h
src/: cli.c  cli.h  disassemble.c  disassemble.h  eva.c  eva.h  eval.c  log.h  meson.build  vm.c
subprojects/: evatest.wrap  sdl2.wrap
test/: meson.build  test.c
